--- a/public/index.html
+++ b/public/index.html
@@ -7,9 +7,9 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Búsqueda de Objetos de Arte</h1>
-
-    <!-- Lista desplegable de departamentos -->
+    <h1>MUSEO METROPOLITANO DE ARTE</h1>
+    <h2>GALERIA</h2>
+    
     <label for="department">Departamento:</label>
     <select id="department">
         <option value="">Selecciona un departamento</option>
@@ -34,21 +34,16 @@
         <option value="21">Modern and Contemporary Art</option>
     </select>
 
-    <!-- Campo de texto para localización -->
     <label for="location">Localización:</label>
-    <input type="text" id="location" placeholder="Introduce una localización (e.g. Europe, China)">
+    <input type="text" id="location" placeholder="Introduce una localización">
 
-    <!-- Campo de texto para la palabra clave -->
     <label for="keyword">Palabra clave:</label>
     <input type="text" id="keyword" placeholder="Introduce una palabra clave">
 
-    <!-- Botón para buscar -->
     <button id="search">Buscar</button>
 
-    <!-- Contenedor para resultados -->
     <div id="resultados"></div>
 
-    <!-- Contenedor para controles de paginación -->
     <div id="pagination-controls"></div>
 
     <script src="script.js"></script>
