--- a/public/index.html
+++ b/public/index.html
@@ -44,7 +44,7 @@
 
     <div id="resultados"></div>
 
-    <div id="pagination-controls"></div>
+    <div id="paginacion"></div>
 
     <script src="script.js"></script>
 </body>
